fix(wizard): main area container overflows behind footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -1409,6 +1409,7 @@ span.fc_list_icon {
    right: 0;
    left: 0;
    bottom: 0;
+   margin-bottom: 20px;
 }
 
 .plugin_formcreator_page .navigationheader .tab_cadre_pager {
